Fix: Prevent name wraps (nowrap)

--- a/god-skins.less
+++ b/god-skins.less
@@ -46,6 +46,7 @@ footer {
     .godname {
         grid-area: name;
         margin: 2px 4px;
+        white-space: nowrap;
         line-height: 32px;
         font-size: 32px;
     }
@@ -80,6 +81,7 @@ footer {
 
             .skinname {
                 grid-area: name;
+                white-space: nowrap;
             }
             /* card full size: 750x1000 */
             .skincard {
